--- a/Leave/WebContent/view/App.view.xml
+++ b/Leave/WebContent/view/App.view.xml
@@ -1,7 +1,7 @@
 <mvc:View controllerName="Leave.view.App" xmlns="sap.m"
 	xmlns:t="sap.ui.table" xmlns:k="sap.ui.commons" xmlns:core="sap.ui.core"
 	xmlns:ui="sap.ui.unified" xmlns:mvc="sap.ui.core.mvc" xmlns:l="sap.ui.layout">
-	<Page id="myPage" class="myPage" showHeader="false">
+	<Page id="myPage" class="myPage" showHeader="false" width="80%">
 <!-- 		<content> -->
 
 			<!-- <VBox> -->
@@ -11,7 +11,7 @@
 					<Text text="Заполните заявку на отпуск" class="myFontSize" />
 				</items>
 			</FlexBox>
-			<l:Grid width="100%" hSpacing="1" defaultSpan="L5 M12 S12" containerQuery="true">
+			<l:Grid hSpacing="1" defaultSpan="L5 M12 S12">
 				<l:content>
 <!-- <HBox> -->
 					<ui:Calendar id="Calendar" intervalSelection="true"
