--- a/Leave/WebContent/css/style.css
+++ b/Leave/WebContent/css/style.css
@@ -7,10 +7,16 @@ body{
 	overflow-y: initial !important;
 }
 
+.sapUiCal{
+	padding:initial !important;
+}
+
 .myCal{
 	box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Параметры тени */
-    padding: 10px;
-	margin:1rem;
+    padding: 5px;
+    padding-bottom:10px;
+    padding-top:10px;
+	margin:10px;
 	
 }
 
@@ -35,11 +41,11 @@ body{
 .myLeaveInfo{
 	box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Параметры тени */
     padding: 10px;
-	margin-top:1rem;
-	margin-left:1rem;
-	margin-bottom:5rem;
-	margin-right:5rem;
-	width:25rem;
+	margin-top:10px;
+	margin-left:10px;
+	margin-bottom:10px;
+	margin-right:10px;
+	width:auto;
 	
 }
 .sapUiBodyBackground, .sapUiBody{
