--- a/Leave/WebContent/view/App.view.xml
+++ b/Leave/WebContent/view/App.view.xml
@@ -39,10 +39,10 @@
 							</items>
 						</FlexBox>
 						<FlexBox alignItems="Center" justifyContent="SpaceBetween"
-							width="auto" class="myPage">
+							width="100%" class="myPage">
 							<items>
 								<Text text="Утверждающий" width="110px"/>
-								<ComboBox id="approver" selectionChange="handleChange"
+								<ComboBox id="approver" selectionChange="handleChange" width="180px"
 									items="{
 									path:'requests>/Who'
 								}">
